--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -16,6 +16,24 @@ library(tidyverse)
 unzip("activity.zip")
 activity <- read_csv("activity.csv")
 ```
+### Total Daily Steps 
+```{r}
+daily_steps <- activity %>% 
+    drop_na() %>%
+    select(date, steps) %>% 
+    group_by(date) %>%
+    summarize(total_daily_steps = sum(steps, na.rm=TRUE), .groups = 'drop')
+head(daily_steps)
+```
+### Mean Steps by Interval
+```{r}
+interval_steps <- activity %>% 
+    drop_na() %>%
+    select(interval, steps) %>% 
+    group_by(interval) %>%
+    summarize(mean_interval_steps = mean(steps, na.rm=TRUE), .groups = 'drop')
+head(interval_steps)
+```
 
 ## What is mean total number of steps taken per day?
 For this part of the assignment, you can ignore the missing values in the dataset.
@@ -23,16 +41,11 @@ For this part of the assignment, you can ignore the missing values in the datase
 1. Make a histogram of the total number of steps taken each day
 2. Calculate and report the mean and median total number of steps taken per day
 
-### Histogram of total number of steps taker per day
+### Histogram of total number of steps taken per day
 
 ```{r}
-daily_steps <- activity %>% 
-    drop_na() %>%
-    select(date, steps) %>% 
-    group_by(date) %>%
-    summarize(total_daily_steps = sum(steps, na.rm=TRUE), .groups = 'drop')
-g <- ggplot(daily_steps, aes(date, total_daily_steps))
-g + geom_col()
+g <- ggplot(daily_steps, aes(total_daily_steps))
+g + geom_histogram(binwidth=2500) + ggtitle("Histogram of Daily Step Data")
 ```
 
 ### Mean
@@ -45,6 +58,8 @@ daily_steps <- activity %>%
 mean_total_steps_per_day <- mean(daily_steps$total_daily_steps, na.rm=TRUE)
 mean_total_steps_per_day
 ```
+The mean total number of steps per day in the data set is `10766.19` steps.
+
 ### Median
 ```{r}
 daily_steps <- activity %>% 
@@ -55,17 +70,22 @@ daily_steps <- activity %>%
 median_total_steps_per_day <- median(daily_steps$total_daily_steps, na.rm=TRUE)
 median_total_steps_per_day
 ```
+The median total number of steps per day in the data set is `10765.00` steps.
 
 ## What is the average daily activity pattern?
 
 1. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 ```{r}
-
+g <- ggplot(interval_steps, aes(interval, mean_interval_steps))
+g + geom_line()
 ```
+
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r}
-
+max_interval = interval_steps %>% filter(mean_interval_steps == max(interval_steps$mean_interval_steps))
+max_interval$interval
 ```
+The interval with the maximum number of steps is `835`.
 
 ## Imputing missing values
 Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
