updates for imputed

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -95,9 +95,110 @@ Note that there are a number of days/intervals where there are missing values (c
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
+### Missing Values Reporting
+> Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+```{r}
+na_rows <- activity %>% filter(is.na(steps))
+count(na_rows)
+```
+The number of rows with NA steps is `2304`.
+
+### Imputing Data
+> Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+I'll use the mean for the interval from the total dataset.
+
+### New Dataset With Imputed
+> Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+imputed_activity <- activity %>% 
+  left_join(interval_steps, by="interval") %>% 
+  mutate(steps = coalesce(steps, mean_interval_steps))
+head(imputed_activity)
+```
+#### Imputed Mean Total Steps
+```{r}
+imputed_daily_steps <- imputed_activity %>% 
+    drop_na() %>%
+    select(date, steps) %>% 
+    group_by(date) %>%
+    summarize(total_daily_steps = sum(steps, na.rm=TRUE), .groups = 'drop')
+head(imputed_daily_steps)
+```
+#### Imputed Mean Steps by Interval
+```{r}
+imputed_interval_steps <- imputed_activity %>% 
+    drop_na() %>%
+    select(interval, steps) %>% 
+    group_by(interval) %>%
+    summarize(mean_interval_steps = mean(steps, na.rm=TRUE), .groups = 'drop')
+head(imputed_interval_steps)
+```
+
+### Histogram of Daily Step Data (With Imputed Means)
+> Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r}
+g <- ggplot(imputed_daily_steps, aes(total_daily_steps))
+g + geom_histogram(binwidth=2500) + ggtitle("Histogram of Daily Step Data (With Imputed Means)")
+```
+#### Mean Daily Steps (Imputed)
+```{r}
+imputed_daily_steps <- imputed_activity %>% 
+    drop_na() %>%
+    select(date, steps) %>% 
+    group_by(date) %>%
+    summarize(total_daily_steps = sum(steps, na.rm=TRUE), .groups = 'drop')
+mean_total_steps_per_day <- mean(imputed_daily_steps$total_daily_steps, na.rm=TRUE)
+mean_total_steps_per_day
+```
+From the imputed data set the mean total number of steps per day in the data set is `10766.19` steps.
+
+### Median Daily Steps (Imputed)
+```{r}
+imputed_daily_steps <- imputed_activity %>% 
+    drop_na() %>%
+    select(date, steps) %>% 
+    group_by(date) %>%
+    summarize(total_daily_steps = sum(steps, na.rm=TRUE), .groups = 'drop')
+median_total_steps_per_day <- median(imputed_daily_steps$total_daily_steps, na.rm=TRUE)
+median_total_steps_per_day
+```
+From the imputed data set the median total number of steps per day in the data set is `10766.19` steps.
+
 ## Are there differences in activity patterns between weekdays and weekends?
 
 For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
 
 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
-2. ake a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
+```{r}
+imputed_activity <- imputed_activity %>% mutate(part_of_week = case_when(
+      weekdays(date) == "Sunday"   ~ "Weekend",
+      weekdays(date) == "Saturday" ~ "Weekend",
+      TRUE                         ~ "Weekday")
+)
+imputed_activity <- imputed_activity %>% mutate(part_of_week = factor(part_of_week))
+head(imputed_activity)
+```
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
+
+Create a data frame with mean number of steps per interval using imputed activity.
+
+```{r}
+imputed_interval_steps <- imputed_activity %>% 
+    drop_na() %>%
+    select(interval, steps, part_of_week) %>% 
+    group_by(interval, part_of_week) %>%
+    summarize(mean_interval_steps = mean(steps, na.rm=TRUE), .groups = 'drop')
+head(imputed_interval_steps)
+```
+
+Plot a panel comparing weekdays to weekends.
+```{r}
+g <- ggplot(imputed_interval_steps, aes(interval, mean_interval_steps))
+g + facet_grid(rows=vars(part_of_week)) + geom_line() 
+
+```
+
